--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   build_runner: ^2.4.9
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+  csv: ^6.0.0
+  intl: ^0.19.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/income.csv
+    - assets/outcome.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
