--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   csv: ^6.0.0
   intl: ^0.19.0
   dropdown_button2: ^2.3.9
+  file_picker: ^8.0.0+1
+  desktop_drop: ^0.4.4
 
 dev_dependencies:
   flutter_test:
